Kubernetes/ingress_tls/ingress_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ing
spec:
  rules:
  - host: jjtechinc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
